FIX ArtistInfo - change box-sizing

--- a/src/components/ArtistInfo/ArtistInfo.module.scss
+++ b/src/components/ArtistInfo/ArtistInfo.module.scss
@@ -3,6 +3,7 @@
     display: block;
     position: static;
     @include noUserSelect;
+    box-sizing: content-box;
 
     @include mediaDesktop {
       position: relative;
