update variables -> add cardIconColor

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -153,6 +153,8 @@ $cardTransition: all ease-in 0.3s;
 $cardImgTransition: all 0.5s ease-out;
 $borderLight: 2px solid $accentRed;
 $borderDark: 2px solid $accentGold;
+$cardIconLight: rgba(255, 255, 255, 0.1);
+$cardIconDark: rgba(26, 24, 24, 0.1);
 
 // Default delay
 $defaultDelay: 0.5s;
