update DragCard + DragGrid -> add card copy

--- a/src/components/DragCard/DragCard.module.scss
+++ b/src/components/DragCard/DragCard.module.scss
@@ -1,8 +1,27 @@
 .drag {
   position: relative;
+
+  &_dragging {
+    opacity: 0.3;
+  }
+
+  @include mediaDesktop {
+    &:hover,
+    &:focus {
+      .button {
+        display: flex;
+      }
+    }
+  }
 }
 
 .button {
+  display: none;
+
+  @include mediaDesktopMaxWidth {
+    display: flex;
+  }
+
   position: absolute;
   top: 12px;
   right: 12px;
@@ -11,6 +30,7 @@
   &_light {
     background-color: $cardIconLight;
   }
+
   &_dark {
     background-color: $cardIconDark;
   }
