--- a/src/ui-components/DropDown/DropDown.module.scss
+++ b/src/ui-components/DropDown/DropDown.module.scss
@@ -29,8 +29,15 @@
   &__wrapper {
     margin-top: 16px;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
     gap: 12px;
+
+    &_oneCol {
+      grid-template-columns: repeat(1, 1fr);
+    }
+
+    &_twoCol {
+      grid-template-columns: repeat(2, 1fr);
+    }
 
     @include mediaTablet {
       margin-top: 20px;
