addd new variables for Pagination

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -136,6 +136,9 @@ $scrollDark: #cdcdcd0d;
 // Scroll button
 $scrollBG: #242222;
 
+// Pagination
+$activeDark: #1212120d;
+
 // Z-INDEX
 $firstLayer: 1;
 $secondLayer: 2;
