--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -19,6 +19,7 @@
     flex-direction: column;
     gap: 9px;
     @include pSmallLight;
+    @include noUserSelect;
 
     @include mediaTablet {
       font-size: $pBaseText;
