--- a/src/pages/MainPage/MainPage.module.scss
+++ b/src/pages/MainPage/MainPage.module.scss
@@ -18,6 +18,14 @@
       padding-top: 30px;
       padding-bottom: 100px;
     }
+
+    &_nonAuth {
+      padding-top: 80px;
+
+      @include mediaTablet {
+        padding-top: 100px;
+      }
+    }
   }
 
   &__control {
