fix Card component

--- a/src/ui-components/Card/Card.module.scss
+++ b/src/ui-components/Card/Card.module.scss
@@ -17,7 +17,7 @@
   &:hover,
   &:focus {
     @include mediaDesktop {
-      .card__icon {
+      .card__inner {
         display: block;
       }
     }
